fix overflow

--- a/style.css
+++ b/style.css
@@ -2,10 +2,6 @@
     box-sizing: border-box;
 }
 
-html {
-    overflow-x: hidden;
-}
-
 html, body {
     margin: 0px;
     padding: 0px;
